# business-rules

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: python-package.yml  release.yml  run_tests.yml
business_rules/: __init__.py  actions.py  engine.py  models.py  operators.py  utils.py  variables.py
business_rules/util/: compat.py
tests/: actions.py  test_actions_class.py  test_engine_logic.py  test_integration.py  test_utils.py  test_variables.py  test_variables_class.py  variables.py
tests/example/: actions.py  main.py  variables.py
tests/operators/: test_operators.py  test_operators_class.py  test_time_operator.py
