[project]
name = "business-rules"
dynamic = ["version"]
description = "Python DSL for setting up business intelligence rules that can be configured without code"
readme = "README.md"
requires-python = ">=3.10,<3.14"
authors = [{ name = "apandey-oss" }]
license = { text = "MIT" }
urls = { Homepage = "https://github.com/apandey-oss/business-rules" }
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [ "nose2", "mock", "ruff", "python-dateutil" ,"pytest", "pytz"]

[tool.uv]
default-groups = ["dev"]

[tool.hatch
version.path = "business_rules/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["business_rules"]
